--- a/style.css
+++ b/style.css
@@ -77,4 +77,12 @@ button {
   font-family: "Beba";
 }
 
+.tarjetas {
+  width: 300px;
+  height: 400px;
+  color: white;
+  border: 1px solid black;
+  margin: 10px 10px;
+}
+
 /*# sourceMappingURL=style.css.map */
