--- a/style.css
+++ b/style.css
@@ -77,12 +77,35 @@ button {
   font-family: "Beba";
 }
 
+.contenedor-tarjetas {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .tarjetas {
-  width: 300px;
-  height: 400px;
-  color: white;
+  width: 350px;
+  height: 500px;
+  color: red;
+  background-color: white;
   border: 1px solid black;
   margin: 10px 10px;
+  background-size: contain;
+}
+.tarjetas .titulo-tarjeta {
+  margin-top: -1px;
+  font-family: "Beba";
+  text-align: center;
+  background-color: whitesmoke;
+}
+.tarjetas .contenedor-imagen {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+}
+.tarjetas .contenedor-imagen img {
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
