--- a/style.scss
+++ b/style.scss
@@ -90,10 +90,31 @@ button {
     }
 }
 
+.contenedor-tarjetas {
+    @include flex();
+    flex-wrap: wrap;
+}
+
 .tarjetas {
-    width: 300px;
-    height: 400px;
-    color: $color-principal;
+    width: 350px;
+    height: 500px;
+    color: $color-terciario;
+    background-color: $color-principal;
     border: 1px solid $color-secundario;
     margin: 10px 10px;
+    background-size: contain;
+    .titulo-tarjeta {
+        margin-top: -1px;
+        font-family: $tipografia-principal;
+        text-align: center;
+        background-color: whitesmoke;
+    }
+    .contenedor-imagen {
+        width: 100%;
+        height: 400px;
+        @include flex();
+        img {
+            width: 100%;
+        }
+    }
 }
