--- a/style.css
+++ b/style.css
@@ -67,3 +67,28 @@
   }
   
   /*# sourceMappingURL=style.css.map */
+
+
+
+
+  button{
+    height:80px;
+    width: 150px;
+ 
+   }
+
+#controles-personaje{
+  display: none;
+
+}
+
+
+
+
+
+
+
+
+
+
+
