--- a/style.css
+++ b/style.css
@@ -1,1 +1,242 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  font-family: "Roboto", sans-serif;
+}
+
+main {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.banner {
+  width: 100%;
+  min-height: 400px;
+  background-image: url("marvel.jpg");
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 50px;
+}
+
+
+.flexColumn, .searchSelectors, header {
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.contentCenter, header {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.secondaryTitles, .searchSelectors .selectorContainer-label, .cardsSection-p {
+  width: 100px;
+  font-size: 1rem;
+  font-weight: bold;
+  color:#dd292f;
+}
+
+.d-none {
+  display: none;
+}
+
+
+footer {
+  height: 7rem;
+  text-align: center;
+}
+footer div {
+  height: 100%;
+  background-color: black;
+  color: white;
+  padding-top: 40px;
+}
+
+.cardsSection {
+  margin-top: 50px;
+  
+}
+.cardsSection-h2 {
+  margin-bottom: 20px;
+}
+.cardsSection-p {
+  margin-bottom: 50px;
+}
+
+
+.card {
+  margin-bottom: 60px;
+  margin-top: 60px;
+  cursor: pointer;
+
+}
+
+.card-img {
+  width: 80%;
+  height: 600px;
+  -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 4px 11px 8px rgba(0,0,0,0.37); 
+  box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 4px 11px 8px rgba(0,0,0,0.37);
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+.card-h3 {
+  font-size: 0.9rem;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+.card:hover {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+          transform:scale(1.25);
+}
+
+.links {
+  text-decoration: none;
+  color: black;
+}
+
+.links:hover {
+  color: #dd292f;
+}
+
+
+.searchSection {
+  margin-top: 60px;
+  width: 80vw;
+  
+}
+
+
+.search{
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border-bottom: 1px solid black;
+  margin-right: 20px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: flex;
+}
+
+.searchTitle-h2{
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.search-input {
+  border: 0;
+  font-size: 1rem;
+  margin-left: 5px;
+  outline: none;
+}
+
+.options-style-1{ 
+  font-weight: 500;
+}
+
+
+.options-style-2{
+  font-weight: 500;
+  text-align: center;
+  
+}
+
+.searchSelectors .selectorContainer {
+  margin-bottom: 20px;
+  display: flex;
+}
+
+.searchSelectors .selectorContainer-select {
+  width: 120px;
+  border: 0;
+  font-weight: 500;
+  margin-right: 20px;
+}
+
+.searchButton {
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+   flex-direction: column;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;    
+}
+.searchButton-input {
+  background-color: black;
+  color: white;
+  padding: 10px 25px;
+  font-size: 1.1rem;
+  cursor: pointer;
+  border-radius:10px;
+  border:1;
+}
+
+.searchButton-input:hover {
+  background-color: #dd292f; 
+}
+
+.searchContainer {
+  width: 90vw;
+}
+
+.paginas {
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-top: 60px;
+  margin-bottom: 80px;
+}
+.paginas button {
+  margin: 8px;
+  border: none;
+}
+.paginas button .enabledButton {
+  color: black;
+  cursor: pointer;
+}
+.paginas button .enabledButton:hover {
+  color: #dd292f;
+}
+.paginas button .disabledButton:hover {
+  color: #dd292f;
+}
+.paginas button .disabledButton {
+  color: black;
+}
+.card-info-img {
+  width: 100%;
+  margin-top: 80px;
+  margin-bottom: 30px;
+}
+.card-info-name {
+  margin-bottom: 20px;
+}
+.card-info-title {
+  margin-bottom: 40px;
+  margin-top: 40px;
+}
+.card-info-p {
+  margin-bottom: 20px;
+}
+
+
+
 
